fix text align

--- a/css/product-main-general.css
+++ b/css/product-main-general.css
@@ -125,6 +125,10 @@
         align-items: center;
     }
 
+    .characteristics-list li {
+        text-align: center;
+    }
+
     .info-container {
         width: 100%;
     }
